# rules_js_test

./: .bazelignore  .bazelrc  .gitignore  .npmrc  BUILD.bazel  DIFF_REPORT.md  MODULE.bazel  README.md  TESTING.md  WORKSPACE_LINKING_PLAN.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: test.yml  update-readme.yml
apps/app-latest/: BUILD.bazel  angular.json  ng_config_no_symlinks.bzl  package.json
apps/app-latest/baseline/: tsconfig.json
apps/app-latest/baseline/src/: index.html
apps/app-latest/esbuild/: bazel-sandbox-plugin.js  bazel-sandbox.js
apps/app-latest/src/: styles.css
apps/app-latest/src/app/: app.component.spec.ts  app.component.ts
apps/app-v14/: BUILD.bazel  angular.json  package.json
apps/app-v14/baseline/: angular.json  package.json  tsconfig.json
apps/app-v14/baseline/src/: index.html  polyfills.ts
apps/app-v14/src/: styles.css
apps/app-v14/src/app/: app.component.ts  app.module.ts
apps/app-v14/webpack/: bazel-sandbox-resolver.js  webpack.config.js
apps/app-v16/: BUILD.bazel  angular.json  package.json
apps/app-v16/baseline/: angular.json  tsconfig.json
apps/app-v16/baseline/src/: index.html
apps/app-v16/baseline/src/app/: app.component.ts
apps/app-v16/src/: styles.css
apps/app-v16/webpack/: bazel-sandbox-resolver.js  webpack.config.js
apps/app-v20/: BUILD.bazel  angular.json  package.json
apps/app-v20/src/: index.html  styles.css
apps/app-v20/src/app/: app.component.ts
apps/app-v21/: BUILD.bazel  angular.json  package.json  run-vitest.js
apps/app-v21/src/: index.html
apps/app-v21/src/app/: app.component.spec.ts  app.component.ts
docs/: BAZEL_INTEGRATION.md
libs/lib-a/: BUILD.bazel  package.json  tsconfig.json
libs/lib-a/src/: index.ts
libs/lib-b/: BUILD.bazel  package.json  tsconfig.json
libs/lib-b/src/: index.ts
libs/lib-c/: BUILD.bazel  package.json  tsconfig.json
libs/lib-c/src/: index.ts
scripts/: generate-diff-report.sh  test-all.js  verify-pnpm-structure.js  verify-runtime-versions-bazel.js  verify-runtime-versions.js
