load("@aspect_rules_js//js:defs.bzl", "js_library", "js_test")
load("@aspect_rules_js//npm:defs.bzl", "npm_link_package")
load("@npm//:defs.bzl", "npm_link_all_packages")

# npm_link_all_packages handles both npm and workspace package linking
npm_link_all_packages(name = "node_modules")

# Root-level links for workspace packages referenced by libs as //:node_modules/@myorg/*
npm_link_package(
    name = "node_modules/@myorg/lib-b",
    src = "//libs/lib-b:pkginjected",
    package = "@myorg/lib-b",
    visibility = ["//:__subpackages__"],
)

npm_link_package(
    name = "node_modules/@myorg/lib-a",
    src = "//libs/lib-a:pkginjected",
    package = "@myorg/lib-a",
    visibility = ["//:__subpackages__"],
)

npm_link_package(
    name = "node_modules/@myorg/lib-c",
    src = "//libs/lib-c:pkginjected",
    package = "@myorg/lib-c",
    visibility = ["//:__subpackages__"],
)

# Runtime version isolation test
js_test(
    name = "test_runtime",
    entry_point = "scripts/verify-runtime-versions-bazel.js",
    data = [
        ":node_modules/@myorg/lib-a",
        ":node_modules/@myorg/lib-b",
    ],
)

# Expose files for Bazel targets
exports_files([
    "package.json",
    "pnpm-lock.yaml",
    "pnpm-workspace.yaml",
])

# Base tsconfig for library compilation
js_library(
    name = "tsconfig_base",
    srcs = ["tsconfig.base.json"],
    visibility = ["//visibility:public"],
)
