"""Bazel module definition for rules_js + Angular test repository."""

module(
    name = "rules_js_test",
    version = "0.0.0",
)

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "aspect_rules_js", version = "3.0.3")
bazel_dep(name = "aspect_rules_ts", version = "3.8.6")
bazel_dep(name = "rules_nodejs", version = "6.7.3")
bazel_dep(name = "jq.bzl", version = "0.6.1")
bazel_dep(name = "yq.bzl", version = "0.3.5")

# rules_angular - using git_override for latest version
bazel_dep(name = "rules_angular")
git_override(
    module_name = "rules_angular",
    remote = "https://github.com/angular/rules_angular.git",
    commit = "2d6de06a64f559d115ea019923561690484677cc",
)

####################
# rules_js setup
####################

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
    npmrc = "//:.npmrc",
)
use_repo(npm, "npm")

####################
# rules_ts setup
####################

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = True)
rules_ts_ext.deps()
use_repo(rules_ts_ext, "npm_typescript")

####################
# rules_angular setup
####################

rules_angular = use_extension("@rules_angular//setup:extensions.bzl", "rules_angular")
rules_angular.setup(
    angular_compiler_cli = "@npm//:node_modules/@angular/compiler-cli",
    typescript = "@npm//:node_modules/typescript",
)
use_repo(rules_angular, "rules_angular_configurable_deps")
