"""Bazel module definition for rules_js + Angular test repository."""

module(
    name = "rules_js_test",
    version = "0.0.0",
)

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "aspect_rules_js", version = "3.0.3")
archive_override(
    module_name = "aspect_rules_js",
    urls = ["https://github.com/martintribo/rules_js/releases/download/v3.0.3-fork.1/rules_js-3.0.3-fork.1.tar.gz"],
    strip_prefix = "rules_js-3.0.3-fork.1",
    integrity = "sha256-DG4+KH3eOCUQ2HVOIPe1YOQQDSu0IhTs99/1DRojBtI=",
)
bazel_dep(name = "aspect_rules_ts", version = "3.8.6")
bazel_dep(name = "rules_nodejs", version = "6.7.3")
bazel_dep(name = "jq.bzl", version = "0.6.1")
bazel_dep(name = "yq.bzl", version = "0.3.5")

bazel_dep(name = "rules_angular")
archive_override(
    module_name = "rules_angular",
    urls = ["https://github.com/martintribo/rules_angular/releases/download/v0.0.1-fork.3/rules_angular-0.0.1-fork.3.tar.gz"],
    strip_prefix = "rules_angular-0.0.1-fork.3",
    integrity = "sha256-7nunHXvK+tAgR7BKgfcIEIDJXUsJ5cl4y0wSztezAvE=",
)

####################
# rules_js setup
####################

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
    npmrc = "//:.npmrc",
)
use_repo(npm, "npm")

####################
# rules_ts setup
####################

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = True)
rules_ts_ext.deps()
use_repo(rules_ts_ext, "npm_typescript")

####################
# rules_angular setup
####################

rules_angular = use_extension("@rules_angular//setup:extensions.bzl", "rules_angular")
rules_angular.setup(
    angular_compiler_cli = "@npm//:node_modules/@angular/compiler-cli",
    typescript = "@npm//:node_modules/typescript",
)
use_repo(rules_angular, "rules_angular_configurable_deps")
