load("@npm//:defs.bzl", "npm_link_all_packages")
load("@rules_angular//src/architect:ng_application.bzl", "ng_application")
load("@rules_angular//src/architect:ng_config.bzl", "ng_config")

npm_link_all_packages(name = "node_modules")

# Create Angular config (transforms angular.json and tsconfig.json)
# This adds preserveSymlinks=true by default for Bazel compatibility
ng_config(
    name = "ng_config",
)

# Build the Angular application
ng_application(
    name = "build",
    node_modules = ":node_modules",
    ng_config = ":ng_config",
    project_name = "app-latest",
    srcs = glob(
        [
            "src/**/*",
            "public/**/*",
        ],
        exclude = ["**/*.spec.ts"],
    ),
    args = ["--configuration=development"],
    deps = [
        # Additional third-party dependencies
        ":node_modules/lodash",
        ":node_modules/@types/lodash",
        ":node_modules/zone.js",
        ":node_modules/typescript",
        # First-party libraries
        "//:node_modules/@myorg/lib-a",
        "//:node_modules/@myorg/lib-b",
    ],
    visibility = ["//visibility:public"],
)
