load("@npm//:defs.bzl", "npm_link_all_packages")
load("@rules_angular//src/architect:ng_application.bzl", "ng_application")
load("@rules_angular//src/architect:ng_config.bzl", "ng_config")  # Original jq-based version

npm_link_all_packages(name = "node_modules")

ng_config(name = "ng_config")

ng_application(
    name = "build",
    node_modules = ":node_modules",
    ng_config = ":ng_config",
    project_name = "app-latest",
    srcs = glob(
        [
            "src/**/*",
            "public/**/*",
        ],
        exclude = ["**/*.spec.ts"],
    ),
    args = ["--configuration=development"],
    deps = [
        ":node_modules/lodash",
        ":node_modules/@types/lodash",
        ":node_modules/zone.js",
        ":node_modules/typescript",
        "//:node_modules/@myorg/lib-a",
        "//:node_modules/@myorg/lib-b",
    ],
    visibility = ["//visibility:public"],
)
