load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//apps/app-v16:@angular/cli/package_json.bzl", angular_cli = "bin")

npm_link_all_packages(name = "node_modules")

# Build the Angular 16 application using ng build
angular_cli.ng(
    name = "build",
    srcs = glob(
        [
            "src/**/*",
        ],
        exclude = ["**/*.spec.ts"],
    ) + [
        "angular.json",
        "tsconfig.json",
        "tsconfig.app.json",
        "package.json",
        ":node_modules/@angular/animations",
        ":node_modules/@angular/common",
        ":node_modules/@angular/compiler",
        ":node_modules/@angular/core",
        ":node_modules/@angular/forms",
        ":node_modules/@angular/platform-browser",
        ":node_modules/@angular/platform-browser-dynamic",
        ":node_modules/@angular/router",
        ":node_modules/@angular-devkit/build-angular",
        ":node_modules/@angular/compiler-cli",
        ":node_modules/lodash",
        ":node_modules/@types/lodash",
        ":node_modules/rxjs",
        ":node_modules/tslib",
        ":node_modules/zone.js",
        ":node_modules/typescript",
        "//libs/lib-a",
        "//libs/lib-b",
    ],
    args = [
        "build",
        "--configuration=production",
    ],
    chdir = package_name(),
    out_dirs = ["dist/app-v16"],
    visibility = ["//visibility:public"],
)
