load("@npm//:defs.bzl", "npm_link_all_packages")
load("@rules_angular//src/architect:ng_application.bzl", "ng_application")
load("@rules_angular//src/architect:ng_config.bzl", "ng_config")

npm_link_all_packages(name = "node_modules")

# Create Angular config (transforms angular.json and tsconfig.json)
ng_config(
    name = "ng_config",
)

# Build the Angular 16 application
ng_application(
    name = "build",
    node_modules = ":node_modules",
    ng_config = ":ng_config",
    project_name = "app-v16",
    srcs = glob(
        ["src/**/*"],
        exclude = ["**/*.spec.ts"],
    ),
    args = ["--configuration=development"],
    deps = [
        ":node_modules/@angular-devkit/build-angular",
        ":node_modules/lodash",
        ":node_modules/@types/lodash",
        ":node_modules/zone.js",
        ":node_modules/typescript",
        "//:node_modules/@myorg/lib-a",
        "//:node_modules/@myorg/lib-b",
        # Include workspace package dependencies for sandbox resolution
        "//:.aspect_rules_js/node_modules/lodash@4.17.15",
        "//:.aspect_rules_js/node_modules/lodash@4.17.21",
        "//:.aspect_rules_js/node_modules/rxjs@7.5.7",
        "//:.aspect_rules_js/node_modules/rxjs@7.8.2",
        "//:.aspect_rules_js/node_modules/tslib@2.8.1",
    ],
    visibility = ["//visibility:public"],
)
