load("@aspect_rules_js//js:defs.bzl", "js_test")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@rules_angular//src/architect:ng_application.bzl", "ng_application")
load("@rules_angular//src/architect:ng_config.bzl", "ng_config")

npm_link_all_packages(name = "node_modules")

ng_config(name = "ng_config")

ng_application(
    name = "build",
    node_modules = ":node_modules",
    ng_config = ":ng_config",
    project_name = "app-v20",
    srcs = glob(
        [
            "src/**/*",
            "public/**/*",
        ],
        exclude = ["**/*.spec.ts"],
    ),
    args = ["--configuration=development"],
    deps = [
        ":node_modules/lodash",
        ":node_modules/@types/lodash",
        ":node_modules/zone.js",
        ":node_modules/typescript",
        ":node_modules/@myorg/lib-a",
    ],
    visibility = ["//visibility:public"],
)

# Vitest unit tests verifying lodash version isolation and rxjs peer dep sharing
js_test(
    name = "test",
    entry_point = "run-vitest.js",
    data = glob(["src/**/*"]) + [
        "package.json",
        "tsconfig.json",
        "tsconfig.spec.json",
        ":node_modules",
    ],
    visibility = ["//visibility:public"],
)
