load("@aspect_rules_js//npm:defs.bzl", "npm_link_package", "npm_package")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

npm_link_all_packages(name = "node_modules")

ts_project(
    name = "lib-b_ts",
    srcs = glob(
        ["src/**/*.ts"],
        exclude = ["src/**/*.d.ts"],
    ),
    declaration = True,
    declaration_map = True,
    source_map = True,
    out_dir = "dist",
    root_dir = "src",
    tsconfig = "tsconfig.json",
    visibility = ["//visibility:public"],
    deps = [
        ":node_modules/@types/lodash",
        ":node_modules/lodash",
        ":node_modules/rxjs",
        ":node_modules/tslib",
    ],
)

# Create npm package from ts_project output (includes package.json)
npm_package(
    name = "pkg",
    srcs = [
        "package.json",
        ":lib-b_ts",
    ],
    package = "@myorg/lib-b",
    visibility = ["//visibility:public"],
)

# Alias for convenience
alias(
    name = "lib-b",
    actual = ":lib-b_ts",
    visibility = ["//visibility:public"],
)
