load("@aspect_rules_js//npm:defs.bzl", "workspace_package")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

npm_link_all_packages(name = "node_modules")

ts_project(
    name = "lib-c_ts",
    srcs = glob(
        ["src/**/*.ts"],
        exclude = ["src/**/*.d.ts"],
    ),
    declaration = True,
    declaration_map = True,
    source_map = True,
    out_dir = "dist",
    root_dir = "src",
    tsconfig = "tsconfig.json",
    visibility = ["//visibility:public"],
    deps = [
        ":node_modules/@types/lodash",
        ":node_modules/lodash",
        ":node_modules/rxjs",
        "//:node_modules/@myorg/lib-b",
    ],
)

# Create workspace package targets for both injected and linked consumers
workspace_package(
    name = "pkg",
    srcs = [
        "package.json",
        ":lib-c_ts",
    ],
    package = "@myorg/lib-c",
    visibility = ["//visibility:public"],
)

# Alias for convenience
alias(
    name = "lib-c",
    actual = ":lib-c_ts",
    visibility = ["//visibility:public"],
)
